# metaloot-sol-program

./: .gitignore  Anchor.toml  Cargo.toml  README.md  admin_account.json  metaloot.json  registry_account.json
programs/metaloot_registry_program/: Cargo.toml
programs/metaloot_registry_program/src/: lib.rs
src/: lib.rs
tests/: integration_test.rs  metaloot_registry_program.ts
