[package]
name = "sol_xyz"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies] 
solana-program = "2.1.6"       # Matches the Solana version you're targeting
        # Keep SDK version aligned
# mpl-token-metadata = "5.1.0"   # Compatible with Solana 2.1.4
borsh = "1.5.3"         
borsh-derive = "1.5.3"       # Serialization library
# spl-token = "7.0.0"

[dev-dependencies]
solana-program-test = "2.1.7"
solana-sdk = "2.1.6"
tokio = { version = "1.42.0", features = ["macros"] }