[package]
name = "sol_xyz"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies] 
mpl-token-metadata = "5.1.0"
solana-program = "2.1.4"       # Matches the Solana version you're targeting
borsh = "1.5.3"         
# borsh-derive = "1.5.3"       # Serialization library

[dev-dependencies]
solana-program-test = "2.1.7"
solana-sdk = "2.1.6"
tokio = { version = "1.42.0", features = ["macros"] }
once_cell = "1.20.2"
lazy_static = "1.5.0"
spl-token = "7.0.0"
